# Lab-Template

./: .devcontainer.json  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: classroom.yml  release.yml
include/: CMakeLists.txt  header.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  output.hpp  test1.cpp  test2.cpp  test3.cpp
